<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestSQLiteDB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dasboard_ft">DasboardFTActivity</string>
    <string name="title_activity_detail_ft">DetailFTActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usernameEditText">Name Account</string>
    <string name="passwordEditText">Password</string>
    <string name="loginButton">Login</string>
    <string name="nameTextView">Name</string>
    <string name="reagentTextView">Reagent</string>
    <string name="resultTextView">Result</string>
    <string name="menuTitleSave">Save</string>
    <string name="menuTitleDelete">Delete</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>
