<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ahmadfauzi.testsqlitedb.login.LoginActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/ivFTText"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/foodtest_text" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:hint="@string/usernameEditText"
            android:singleLine="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:hint="@string/passwordEditText"
            android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:onClick="enterLogin" />
    </LinearLayout>

</LinearLayout>
